notebooks/book1/17/gprDemoArd.log
An error occurred while executing the following cell:
------------------
Source of this notebook is here:  https://github.com/probml/pyprobml/blob/master/notebooks/book2/17/gprDemoArd.ipynb
------------------

  File "/tmp/ipykernel_3843/1331271049.py", line 1
    Source of this notebook is here:  https://github.com/probml/pyprobml/blob/master/notebooks/book2/17/gprDemoArd.ipynb
            ^
SyntaxError: invalid syntax

SyntaxError: invalid syntax (1331271049.py, line 1)
